<resources>
    <string name="app_name">qydemo0</string>
    <string name="login_username">用户名</string>
    <string name="login_email">邮箱</string>
    <string name="login_phone">电话</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="phone_number">电话号码</string>
    <string name="title_activity_test_tab">TestTabActivity</string>
    <string name="hello_blank_fragment">hjt</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="url">/sdcard/video/0.mp4</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="send_phone_verify_code">发送验证码</string>
    <string name="phone_verify_code">验证码</string>
    <string name="verify">验证</string>
    <string name="posts">动态</string>
    <string name="category">分区</string>
    <string name="haveFun">娱乐</string>
    <string name="dashboard">我的</string>
    <string name="home">舞房</string>
    <string name="study_recent">最近学习</string>
    <string name="learning_list">学习列表</string>
    <string name="dance_free">随心舞蹈</string>
    <string name="file_url">文件地址</string>
    <string name="browse">浏览</string>
    <string name="no_file_now">未选择文件</string>
    <string name="get_file_now">已选择文件</string>
    <string name="avatar">头像</string>
    <string name="gender">性别</string>
    <string name="user_sign">个性签名</string>
    <string name="upload">上传</string>
    <string name="video_name">视频名称</string>
    <string name="video_category">视频分类</string>
    <string name="introduction">简介</string>
    <string name="follow">关注</string>
    <string name="fan">粉丝</string>
    <string name="add">添加</string>
    <string name="tag">标签</string>
    <string name="recommendation">猜你喜欢</string>
    <string name="choose_pic">选择图片</string>
    <string name="selector_image">图片</string>
    <string name="selector_send">确定</string>
    <string name="selector_preview">预览</string>
    <string name="selector_select">选择</string>
    <string name="selector_image_num">%d张</string>
    <string name="selector_all_image">全部图片</string>
    <string name="selector_this_today">今天</string>
    <string name="selector_this_week">本周</string>
    <string name="selector_this_month">本月</string>
    <string name="selector_confirm">确定</string>
    <string name="selector_cancel">取消</string>
    <string name="selector_hint">提示</string>
    <string name="selector_permissions_hint">该相册需要赋予访问存储和拍照的权限，请到“设置”>“应用”>“权限”中配置权限。</string>
</resources>