<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginWays.LoginUsernameFragment" >

    <EditText
        android:id="@+id/edit_text_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/edit_text_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/button_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login" />
</LinearLayout>