<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="15dp"
    tools:context=".UserSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/setting_avatar"
        android:background="@color/text_background"
        android:translationZ="10dp"
        android:paddingLeft="10dp"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/avatar"
            android:id="@+id/text_avatar"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="80dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_default_avatar"
            android:layout_gravity="center"
            android:id="@+id/image_setting_avatar"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.04"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_arrow2"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/text_background"
        android:id="@+id/setting_username"
        android:translationZ="10dp"
        android:paddingLeft="10dp"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/username"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:id="@+id/text_setting_username"
                android:text=""/>
        </FrameLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.04"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_arrow2"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/setting_gender"
        android:background="@color/text_background"
        android:translationZ="10dp"
        android:paddingLeft="10dp"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/gender"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:id="@+id/user_setting_gender"
                android:text=""/>
        </FrameLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.04"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_arrow2"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        android:layout_marginLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/text_background"
        android:translationZ="10dp"
        android:id="@+id/setting_sign"
        android:layout_marginBottom="40dp"
        android:paddingLeft="10dp"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/user_sign"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:id="@+id/user_setting_sign"
                android:text=""/>
        </FrameLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.04"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_arrow2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/text_background"
        android:translationZ="10dp"
        android:paddingLeft="10dp"
        android:paddingVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="UID"/>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:paddingRight="10dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:id="@+id/user_setting_uid"
                android:text=""/>
        </FrameLayout>
    </LinearLayout>


</LinearLayout>